maybe fixed the link/gallery issue on mobile,but the obrders are still up on it so i can see things

--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -18,10 +18,11 @@
     margin: 0 auto 0 0;
     height: 100%;
     max-width: 9.125rem;
-    width: 40%;
+    /*width: 40%;*/
     /* prevents padding from affecting height and width */
     box-sizing: border-box;
     padding: 0;
+    border: 1px red solid;
 }
 
 .hideLogo {
@@ -38,6 +39,7 @@
     right: 0;
     top: 0;
     height: 100%;
+    border: 1px teal solid;
 }
 
 .navWrapper ul {
